# autoexp

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  run_cli.py  verifier.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
autoeval/: __main__.py  agent.py  agent_contract.py  cli.py  config.py  connectors.py  evals.py  harness_tools.py  instruction.txt  mcp.py  migrations.py  orchestrator.py  policy.py  project.py  prompts.py  provider_launcher.py  provider_surface.py  report.txt  reports.py  rpi.py  runner.py  runs.py  runtime.py  security.py  server.py  store.py  terminal_ui.py  tracker.py  verifier.py  workspace.py
autoeval/prompts/: decision.md
autoeval/providers/: __init__.py  codex.py
autoeval/schemas/: agent_contract.v1.json
autoeval/templates/: rpi_feature_list.md  rpi_implementation.md  rpi_research.md  rpi_review.md
autoeval/ui/: index.html
autoeval/ui/assets/: index-2J6wSvzz.js  index-h57H4tMl.js
autoexp/: __main__.py  artifacts.py  autoresearch.py  cli.py  execution.py  git_store.py  importer.py  instruction.txt  jobs.py  mcp.py  preflight.py  project.py  provenance.py  report.txt  reports.py  review.py  runner.py  runs.py  runtime.py  server.py  snapshots.py  store.py  workspace.py
autoexp/ui/: index.html
autoexp/ui/assets/: index-B4-IDKIc.css  index-Be6lGkLm.css  index-Cjrv7DqA.css  index-CpPq37cy.js  index-D2aFYuUk.css  index-DAK9zOIp.js  index-DM5jLNb0.css  index-Db-eIUmR.css  index-DeT_jCTj.js  index-DgVmUVn6.js  index-Dr6fUFRp.js  index-DsqCI3ob.js  index-JiuC4y3H.js  index-QSbMqO72.css  index-cOK91pWf.js  index-fie7wOwW.css  index-kOc2WN40.css  index-sWABE24A.js  index-wyM3C2QV.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/ui/: badge.tsx  button.tsx  table.tsx
plugins/autoexp/.claude-plugin/: plugin.json
plugins/autoexp/.codex-plugin/: plugin.json
plugins/autoexp/skills/autoexp/: SKILL.md
plugins/autoexp/skills/autoexp-review/: SKILL.md
plugins/autoexp/skills/autoexp-review/agents/: openai.yaml
plugins/autoexp/skills/autoexp/agents/: openai.yaml
scripts/: provider_connector.py  smoke.sh
tests/: test_cli.py  test_review_regressions.py
