[project]
name = "phase-test-autoeval"
version = "0.1.0"
description = "Phase 1-5 MVP harness implementation test"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
autoeval = "autoeval.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoeval*"]

[tool.setuptools.package-data]
autoeval = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["phase_test/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
