[project]
name = "autoeval"
version = "0.1.0"
description = "Harness-first control plane for long-running coding-agent workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.2",
  "pytest>=8.2.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
autoeval = "autoeval.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoeval*"]

[tool.setuptools.package-data]
autoeval = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
