[project]
name = "autoexp"
version = "0.1.0"
description = "Git-backed sandbox/versioning runtime for black-box executable workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Shreyashkar Sahu" }
]
keywords = ["evaluation", "workflow", "docker", "versioning", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
autoexp = "autoexp.cli:main"

[project.urls]
Homepage = "https://github.com/shreyashkar-ml/autoexp"
Issues = "https://github.com/shreyashkar-ml/autoexp/issues"

[tool.setuptools]
packages = ["autoexp", "autoexp.ui", "autoexp.ui.assets"]

[tool.setuptools.package-data]
autoexp = ["instruction.txt", "report.txt"]
"autoexp.ui" = ["index.html", "*.png"]
"autoexp.ui.assets" = ["*.css", "*.js"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
